# yosh

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  TODO.md  build.rs  mise.toml  performance.md
.config/: nextest.toml
benches/: exec_bench.rs  expand_bench.rs  interactive_smoke.rs  lexer_bench.rs  parser_bench.rs  plugin_bench.rs  post-refactoring.txt  startup_bench.rs
benches/data/: large_script.sh  script_heavy.sh  startup_loop.sh
crates/kish-plugin-api/: Cargo.toml
crates/kish-plugin-manager/: Cargo.toml  build.rs
crates/kish-plugin-manager/src/: config.rs  github.rs  install.rs  lib.rs  lockfile.rs  main.rs  sync.rs  verify.rs
crates/kish-plugin-manager/tests/: cli_help.rs
crates/yosh-plugin-api/: .last-published-wit.sha256  Cargo.toml
crates/yosh-plugin-manager/: Cargo.toml  build.rs
crates/yosh-plugin-manager/src/: config.rs  github.rs  install.rs  lib.rs  lockfile.rs  main.rs  metadata_extract.rs  precompile.rs  resolve.rs  sync.rs  update.rs  verify.rs
crates/yosh-plugin-manager/tests/: cli_help.rs  sync_integration.rs
crates/yosh-plugin-sdk/: Cargo.toml
crates/yosh-plugin-sdk/src/: export.rs  lib.rs  style.rs
docs/: posix-shell-reference.md
docs/kish/: plugin.md
docs/posix/: chapter2-coverage.md
e2e/: README.md  run_tests.sh
e2e/arithmetic/: assignment_in_expr.sh  basic_operations.sh  bitwise_operators.sh  cmd_sub_quoted_paren.sh  comma_operator.sh  comparison.sh  compound_assign.sh  division_by_zero.sh  hex_octal.sh  logical_operators.sh  modulo_by_zero.sh  nested_parens.sh  nested_ternary.sh  operator_precedence.sh  positional_in_arith.sh  ternary.sh  unary_minus.sh  undefined_var_is_zero.sh  variable_reference.sh
e2e/builtin/: alias_basic.sh  bg_no_monitor.sh  cd_basic.sh  cd_cdpath_basic.sh  cd_cdpath_empty_entry.sh  cd_cdpath_not_found.sh  cd_dash_oldpwd.sh  cd_dash_prints_pwd.sh  cd_double_dash.sh  cd_invalid_option.sh  cd_logical_default.sh  cd_logical_dotdot.sh  cd_oldpwd_logical.sh  cd_physical_flag.sh  cd_too_many_args.sh  colon_always_success.sh  colon_noop.sh  echo_basic.sh  echo_dash_n.sh  echo_no_args.sh  eval_basic.sh  eval_variable.sh  exec_no_args.sh  exec_replace.sh  export_basic.sh  export_format.sh  fg_no_monitor.sh  job_spec_ambiguous.sh  job_spec_nomatch.sh  job_spec_prefix.sh  job_spec_substring.sh  jobs_background.sh  jobs_basic.sh  readonly_basic.sh  set_dash_dash.sh  set_monitor_flag.sh  set_monitor_off.sh  set_positional.sh  shift_basic.sh  source_env.sh  (+7 more)
e2e/builtin_command/: command_V_external.sh  command_V_not_found.sh  command_not_executable.sh  command_p_when_path_unset.sh  command_skips_function.sh  command_v_alias.sh  command_v_builtin.sh  command_v_finds_external.sh  path_initialized_at_startup.sh
e2e/command_execution/: assign_cmd_sub_same_status.sh  assign_preserves_prior_status.sh  assignment_only.sh  command_not_found.sh  echo_simple.sh  empty_command.sh  empty_var_command.sh  exit_code_custom.sh  exit_code_success.sh  multiple_commands.sh  path_search.sh  permission_denied.sh  prefix_assignment_external.sh  prefix_assignment_scope.sh  script_file.sh
e2e/command_substitution/: backtick_syntax.sh  basic.sh  cmd_sub_preserves_spaces.sh  cmd_sub_with_redirect.sh  empty_command_sub.sh  exit_code_propagation.sh  in_assignment.sh  in_double_quotes.sh  multiline_output.sh  nested.sh  nested_cmdsub_in_arith.sh  nested_cmdsub_pipeline.sh  nested_cmdsub_variable.sh  nested_deep.sh  nested_quoted_paren.sh  nested_with_arith.sh  nested_with_quotes.sh  trailing_newline_removed.sh  trailing_newlines_multiple.sh
e2e/control_flow/: break_continue.sh  break_nested.sh  break_with_count.sh  case_basic.sh  case_empty_pattern.sh  case_glob.sh  continue_with_count.sh  for_default_positional.sh  for_empty.sh  for_empty_list.sh  for_list.sh  for_no_in_clause.sh  if_elif.sh  if_else.sh  if_false.sh  if_nested.sh  if_true.sh  until_basic.sh  while_basic.sh  while_false_body_skipped.sh  while_false_no_exec.sh
e2e/field_splitting/: custom_ifs.sh  default_ifs.sh  empty_ifs.sh  glob_basic.sh  glob_char_class.sh  glob_dot_files.sh  glob_negated_class.sh  glob_no_match.sh  glob_question_mark.sh  ifs_colon.sh  ifs_mixed_whitespace_non.sh  ifs_non_whitespace_consecutive.sh  ifs_unset_default.sh  ifs_whitespace_trimming.sh  no_split_in_quotes.sh  noglob.sh
e2e/function/: basic_definition.sh  dollar_at_in_function.sh  function_exit_vs_return.sh  function_local_positional.sh  function_nested_definition.sh  function_override_builtin.sh  function_prefix_assignment.sh  function_prefix_multi_assign.sh  function_redirect.sh  global_variable.sh  positional_params_restore.sh  recursion.sh  return_default.sh  return_value.sh  with_arguments.sh
e2e/pipeline_and_list/: and_list.sh  and_list_short_circuit.sh  and_or_combined.sh  background_command.sh  mixed_and_or_list.sh  multi_stage_pipe.sh  negation.sh  negation_with_and_or.sh  or_list.sh  or_list_short_circuit.sh  pipe_exit_status.sh  pipeline_exit_last.sh  pipeline_subshell.sh  pipeline_with_builtin.sh  semicolon_list.sh  simple_pipe.sh
e2e/quoting/: adjacent_quoted_strings.sh  backslash_escape.sh  backslash_in_double_quotes.sh  backslash_line_continuation.sh  backslash_non_special_in_dquotes.sh  backslash_special_in_dquotes.sh  dollar_at_end_of_dquotes.sh  double_quotes.sh  double_quotes_expansion.sh  empty_string.sh  empty_strings_as_args.sh  glob_suppressed.sh  literal_dollar.sh  nested_quotes.sh  quote_removal_order.sh  single_quote_in_dquotes.sh  single_quotes.sh  spaces_preserved.sh
e2e/redirection/: dev_null.sh  fd_close.sh  heredoc_arith_quoted_paren.sh  heredoc_basic.sh  heredoc_cmd_sub_quoted_paren.sh  heredoc_empty.sh  heredoc_expansion.sh  input_redirect.sh  (+14 more)
src/: error.rs  lib.rs  main.rs  signal.rs
tests/: cli_help.rs  errexit.rs  history.rs  ignored_on_entry.rs  interactive.rs  parser_integration.rs  plugin.rs  plugin_cli_help.rs  pty_interactive.rs  signals.rs  subshell.rs
tests/plugins/test_plugin/: Cargo.toml
tests/plugins/test_plugin/src/: bindings.rs  lib.rs
tests/plugins/trap_plugin/: Cargo.toml
tests/plugins/trap_plugin/src/: bindings.rs  lib.rs
(+412 files in other folders)
