[workspace]
members = [
    ".",
    "crates/yosh-plugin-api",
    "crates/yosh-plugin-sdk",
    "crates/yosh-plugin-manager",
    "tests/plugins/test_plugin",
]

[package]
name = "yosh"
version = "0.1.2"
edition = "2024"
description = "A POSIX-compliant shell implemented in Rust"
license = "MIT"
repository = "https://github.com/k-ymmt/yosh"

[dependencies]
nix = { version = "0.31", features = ["signal", "process", "fs", "poll", "term"] }
libc = "0.2"
crossterm = "0.29"
libloading = "0.8"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
yosh-plugin-api = { version = "0.1.2", path = "crates/yosh-plugin-api" }
unicode-width = "0.2"
owo-colors = "4"
dhat = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
crossterm = "0.29"
expectrl = "0.8"

[features]
# Enables dhat-rs heap profiling in the `yosh-dhat` binary.
# Build with: cargo build --features dhat-heap --bin yosh-dhat --profile profiling
dhat-heap = ["dep:dhat"]

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "expand_bench"
harness = false

[[bench]]
name = "startup_bench"
harness = false

[[bench]]
name = "exec_bench"
harness = false

[[bench]]
name = "interactive_smoke"
harness = false

[profile.profiling]
inherits = "release"
debug = true
strip = false
