[workspace]
members = [
    ".",
    "crates/yosh-plugin-api",
    "crates/yosh-plugin-sdk",
    "crates/yosh-plugin-manager",
    "tests/plugins/test_plugin",
    "tests/plugins/trap_plugin",
]
# Exclude wasm-component test plugins from default builds. They are
# `crate-type = ["cdylib"]` for `wasm32-wasip2` only and fail to link
# on the host target (undefined `_yosh:plugin/...` cabi symbols, by
# design — they need cargo-component's wasm pipeline). Build them with:
#   cargo component build -p test_plugin --target wasm32-wasip2 --release
#   cargo component build -p trap_plugin --target wasm32-wasip2 --release
default-members = [
    ".",
    "crates/yosh-plugin-api",
    "crates/yosh-plugin-sdk",
    "crates/yosh-plugin-manager",
]

[package]
name = "yosh"
version = "0.2.1"
edition = "2024"
description = "A POSIX-compliant shell implemented in Rust"
license = "MIT"
repository = "https://github.com/k-ymmt/yosh"

[dependencies]
nix = { version = "0.31", features = ["signal", "process", "fs", "poll", "term"] }
libc = "0.2"
crossterm = "0.29"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
yosh-plugin-api = { version = "0.2.1", path = "crates/yosh-plugin-api" }
yosh-plugin-manager = { version = "0.2.1", path = "crates/yosh-plugin-manager" }
unicode-width = "0.2"
owo-colors = "4"
dhat = { version = "0.3", optional = true }
wasmtime = { version = "27", default-features = false, features = ["component-model", "cranelift", "cache", "runtime"] }
wasmtime-wasi = { version = "27", default-features = false }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
crossterm = "0.29"
expectrl = "0.8"

[features]
# Enables dhat-rs heap profiling in the `yosh-dhat` binary.
# Build with: cargo build --features dhat-heap --bin yosh-dhat --profile profiling
dhat-heap = ["dep:dhat"]

# Exposes `crate::plugin::test_helpers` outside of `cfg(test)`. Used by
# integration tests in `tests/plugin.rs` (Task 6) that need to load
# plugins with explicit capabilities and inspect store state.
test-helpers = []

[[test]]
name = "plugin"
path = "tests/plugin.rs"
required-features = ["test-helpers"]

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "expand_bench"
harness = false

[[bench]]
name = "startup_bench"
harness = false

[[bench]]
name = "exec_bench"
harness = false

[[bench]]
name = "interactive_smoke"
harness = false

[[bench]]
name = "plugin_bench"
harness = false
required-features = ["test-helpers"]

[profile.profiling]
inherits = "release"
debug = true
strip = false
