[package]
name = "kish-plugin-manager"
version = "0.1.0"
edition = "2024"

[lib]
name = "kish_plugin_manager"
path = "src/lib.rs"

[[bin]]
name = "kish-plugin"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
ureq = "3"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
mockito = "1"
