[package]
name = "yosh-plugin-manager"
version = "0.1.3"
edition = "2024"
description = "Plugin manager for yosh shell"
license = "MIT"
repository = "https://github.com/k-ymmt/yosh"

[lib]
name = "yosh_plugin_manager"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
serde_json = "1"
ureq = "3"
sha2 = "0.10"
tempfile = "3"

[dev-dependencies]
mockito = "1"
