[package]
name = "yosh-plugin-manager"
version = "0.2.1"
edition = "2024"
description = "Plugin manager for yosh shell"
license = "MIT"
repository = "https://github.com/k-ymmt/yosh"

[lib]
name = "yosh_plugin_manager"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
serde_json = "1"
ureq = "3"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
wasmtime = { version = "27", default-features = false, features = ["component-model", "cranelift", "runtime"] }
wasmtime-wasi = { version = "27", default-features = false }
yosh-plugin-api = { version = "0.2.0", path = "../yosh-plugin-api" }

[dev-dependencies]
mockito = "1"
